--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,7 @@
 .page {
-  background-color: #000;
   max-width: 1280px;
+  background-color: #000;
+  color: #fff;
+  font-family: 'Inter', sans-serif;
+  margin: 0 auto;
 }
