--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,56 @@
 /* vendor */
 @import url('../vendor/normalize.css');
 
+/* fonts */
+@import url('../fonts/fonts.css');
+
 /* page */
 @import url('../blocks/page/page.css');
+
+/* header */
+@import url('../blocks/header/header.css');
+
+/* logo */
+@import url('../blocks/logo/logo.css');
+
+/* main */
+@import url('../blocks/main/main.css');
+
+/* profile */
+@import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__avatar/profile__avatar.css');
+@import url('../blocks/profile/__info/profile__info.css');
+@import url('../blocks/profile/__text/profile__text.css');
+@import url('../blocks/profile/__list/profile__list.css');
+
+/* buttons */
+@import url('../blocks/edit-button/edit-buuton.css');
+@import url('../blocks/add-button/add-button.css');
+
+
+/* elements */
+@import url('../blocks/elements/elements.css');
+
+/* cards */
+@import url('../blocks/cards/cards.css');
+@import url('../blocks/cards/__card/cards__card.css');
+@import url('../blocks/cards/__like/cards__like.css');
+@import url('../blocks/cards/__text/cards__text.css');
+@import url('../blocks/cards/__foto/cards__foto.css');
+@import url('../blocks/cards/__list/cards__list.css');
+
+/* footer */
+@import url('../blocks/footer/footer.css');
+@import url('../blocks/footer/__text/footer__text.css');
+
+/* pop-up */
+@import url('../blocks/pop-up/pop-up.css');
+@import url('../blocks/pop-up/__button/pop-up__button.css');
+@import url('../blocks/pop-up/__name/pop-up__name.css');
+@import url('../blocks/pop-up/__text/pop-up__text.css');
+@import url('../blocks/pop-up/__title/pop-up__title.css');
+@import url('../blocks/pop-up/__close/pop-up__close.css');
+@import url('../blocks/pop-up/__close-img/pop-up__close-img.css');
+@import url('../blocks/pop-up/_active/pop-up_active.css');
+@import url('../blocks/pop-up/__container/pop-up__container.css');
+
