--- a/blocks/addButton/addButton.css
+++ b/blocks/addButton/addButton.css
@@ -1,4 +1,4 @@
-.add-button {
+.addButton {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,12 +12,12 @@
   padding: 0;
 }
 
-.add-button:hover {
+.addBtton:hover {
   opacity: .4;
 }
 
 @media (min-width: 768px) {
-  .add-button {
+  .addButton {
     min-width: 150px;
     margin: 0 0 0 244px ;
     align-self: center;
