--- a/blocks/addButton/addButton.css
+++ b/blocks/addButton/addButton.css
@@ -12,14 +12,19 @@
   padding: 0;
 }
 
-.addBtton:hover {
+.addButton:hover {
   opacity: .4;
 }
 
 @media (min-width: 768px) {
   .addButton {
     min-width: 150px;
-    margin: 0 0 0 244px ;
+    margin: 0 0 0 100px;
     align-self: center;
+  }
+}
+@media (min-width: 899px) {
+  .addButton {
+    margin: 0 0 0 244px;
   }
 }
