--- a/blocks/pop-up/__close-img/pop-up__close-img.css
+++ b/blocks/pop-up/__close-img/pop-up__close-img.css
@@ -1,3 +1,12 @@
 .pop-up__close-img {
   max-width: 26px;
+  min-height: 26px;
+}
+
+
+@media (min-width: 600px) {
+  .pop-up__close-img{
+    max-width: 40px;
+    min-height: 40px;
+  }
 }
