--- a/blocks/pop-up/__text/pop-up__text.css
+++ b/blocks/pop-up/__text/pop-up__text.css
@@ -1,7 +1,8 @@
 .pop-up__text {
-  max-width: calc(100% - 44px);
+  display: block;
   border: none;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
-  margin: 30px 0 0 0;
+  border-bottom: 1px solid #000;
+  margin: 0 auto;
   padding-bottom: 13px;
+
 }
