--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -1,13 +1,8 @@
 .pop-up__title {
-  color: #000;
-  font-weight: 900;
   font-size: 18px;
   line-height: 22px;
-  margin: 25px 0 75px 0;
-}
-
-@media (min-width: 768px) {
-  .pop-up__title {
-    margin: 34px 0 54px 0;
-  }
+  color: #000;
+  padding: 25px 0 0 0;
+  text-align: center;
+  margin: 0;
 }
