--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -11,6 +11,16 @@
 
 @font-face {
   src:
+  url('../fonts/Inter-Medium.woff2') format('woff2'),
+  url('../fonts/Inter-Medium.woff') format('woff'),
+  url('../fonts/Inter-Medium.ttf') format('truetype');
+  font-family: 'Inter';
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  src:
   url('../fonts/Inter-Bold.woff2') format('woff2'),
   url('../fonts/Inter-Bold.woff') format('woff'),
   url('../fonts/Inter-Bold.ttf') format('truetype');
