--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -1,3 +1,11 @@
+.cards__like {
+  min-width: 22px;
+  background-image: url('../../../images/heart.svg');
+  background-repeat: no-repeat;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+}
 .cards__like:hover {
-  opacity: .4;
+  opacity: .5;
 }
