--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -4,3 +4,10 @@
   font-size: 14px;
   line-height: 17px;
 }
+
+@media (min-width: 768px) {
+  .footer__text {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
