--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,15 +1,15 @@
 .header {
   max-width: 100%;
-  min-height: 56px;
-  border-bottom: 1px solid rgba(54, 54, 54, .4);
+  border-bottom: 1px solid rgba(54, 54, 54, .7);
   margin: 28px 0 0 0;
+  padding-bottom: 32px;
 }
 
 @media (min-width: 425px) {
   .header {
     max-width: 880px;
-    max-height: 74px;
     margin: 28px auto 0 auto;
+    padding-bottom: 41px;
   }
 }
 
