--- a/blocks/pop-up/__container/pop-up__container.css
+++ b/blocks/pop-up/__container/pop-up__container.css
@@ -1,16 +1,19 @@
 .pop-up__container {
   max-width: 282px;
-  min-height: 322px;
   background-color: #fff;
   margin: 123px auto 0 auto;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 @media (min-width: 600px) {
   .pop-up__container {
     max-width: 430px;
-    min-height: 330px;
     margin: 195px auto 0 auto;
   }
 }
