--- a/blocks/pop-up/__text/pop-up__text.css
+++ b/blocks/pop-up/__text/pop-up__text.css
@@ -1,8 +1,13 @@
 .pop-up__text {
   display: block;
   border: none;
-  border-bottom: 1px solid #000;
-  margin: 0 auto;
+  border-bottom: 1px solid rgba(0, 0, 0, .2);
   padding-bottom: 13px;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+}
 
+.pop-up__text:first-child {
+  margin-bottom: 30px;
 }
