--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,8 +1,8 @@
-.edit-button {
+.profile__edit-button {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #000;
+  background-color: Transparent;
   min-width: 18px;
   min-height: 18px;
   border: 1px solid #fff;
@@ -10,13 +10,14 @@
   padding: 0;
   margin: 30.25px 0 0 10px;
   cursor: pointer;
+  outline: none;
 }
-.edit-button:hover {
-  opacity: .4;
+.profile__edit-button:hover {
+  opacity: .5;
 }
 
 @media (min-width: 768px) {
-  .edit-button {
+  .profile__edit-button {
     margin: 15px 0 0 18px;
     min-width: 24px;
     min-height: 24px;
