--- a/blocks/profile/__text/profile__text.css
+++ b/blocks/profile/__text/profile__text.css
@@ -8,7 +8,7 @@
 
 @media (min-width: 768px) {
   .profile__text {
-    margin: 16px 0 0 0;
+    margin: 16px 130px 0 0;
     font-size: 18px;
     line-height: 22px;
   }
