--- a/blocks/pop-up/__btn-close/pop-up__btn-close.css
+++ b/blocks/pop-up/__btn-close/pop-up__btn-close.css
@@ -3,7 +3,7 @@
   top: -35px;
   right: 0;
   cursor: pointer;
-  background-color: Transparent;
+  background-color: transparent;
   background-image: url('../../../images/CloseIcon.svg');
   background-size: cover;
   min-width: 26px;
