--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: Transparent;
+  background-color: transparent;
   min-width: 18px;
   min-height: 18px;
   border: 1px solid #fff;
