--- a/blocks/pop-up/__btn-save/pop-up__btn-save.css
+++ b/blocks/pop-up/__btn-save/pop-up__btn-save.css
@@ -19,7 +19,9 @@
 
 @media (min-width: 768px) {
   .pop-up__btn-save {
+    min-width: calc(100% - 72px);
     font-size: 18px;
     line-height: 22px;
+    margin: 48px auto 0 auto;
   }
 }
