--- a/blocks/pop-up/__title/pop-up__title.css
+++ b/blocks/pop-up/__title/pop-up__title.css
@@ -1,4 +1,5 @@
 .pop-up__title {
+  font-weight: 900;
   font-size: 18px;
   line-height: 22px;
   color: #000;
@@ -6,4 +7,12 @@
   text-align: center;
   margin: 0;
   display: block;
+}
+
+@media (min-width: 768px) {
+  .pop-up__title {
+    font-size: 24px;
+    line-height: 29px;
+    padding: 34px 0 0 0;
+  }
 }
