--- a/blocks/cards/__like/cards__like.css
+++ b/blocks/cards/__like/cards__like.css
@@ -1,10 +1,10 @@
 .cards__like {
   min-width: 22px;
-  background-image: url('../../../images/heart.svg');
-  background-repeat: no-repeat;
+  min-height: 19px;
   border: none;
   background-color: transparent;
   padding: 0;
+  background: url('../../../images/heart.svg') center no-repeat;
 }
 .cards__like:hover {
   opacity: .5;
