--- a/blocks/cards/__list/cards__list.css
+++ b/blocks/cards/__list/cards__list.css
@@ -1,6 +1,6 @@
 .cards__list {
-  list-style-type: none;
+  margin: 0;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
-  padding: 25px 0 31px 0;
 }
