--- a/blocks/cards/__text/cards__text.css
+++ b/blocks/cards/__text/cards__text.css
@@ -2,8 +2,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;
+  margin: 25px 0 30px 0;
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
+  max-width: 122px;
 }
