--- a/pages/index.css
+++ b/pages/index.css
@@ -69,5 +69,5 @@
 @import url('../blocks/pop-up-foto/__text/pop-up-foto__text.css');
 @import url('../blocks/pop-up-foto/pop-up-foto.css');
 @import url('../blocks/pop-up-foto/_active/pop-up_active.css');
-@import url('../blocks/pop-up-foto/__img/pop-up-foto__img');
+@import url('../blocks/pop-up-foto/__img/pop-up-foto__img.css');
 @import url('../blocks/pop-up-foto/__btn-close/pop-up-foto__btn-close.css');
