--- a/blocks/pop-up-foto/__container/pop-up-foto__container.css
+++ b/blocks/pop-up-foto/__container/pop-up-foto__container.css
@@ -1,8 +1,8 @@
 .pop-up-foto__container {
-  max-width: 240px;
+  max-width: calc(100% - 80px);
   min-height: 299px;
   background-color: #fff;
-  margin: 136px auto 0 auto;
+  margin: 0 auto 0 auto;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
@@ -10,8 +10,7 @@
 
 @media (min-width: 600px) {
   .pop-up-foto__container{
-    margin: 90px auto 0 auto;
-    max-width: 75vw;
-    min-height: 75vh;
+    max-width: calc(100% - 464px);
+    /* min-height: 75vh; */
   }
 }
