--- a/blocks/pop-up-foto/__img/pop-up-foto__img.css
+++ b/blocks/pop-up-foto/__img/pop-up-foto__img.css
@@ -1,4 +1,5 @@
 .pop-up-foto__img {
-  /* max-width: 240px;
-  max-height: 299px; */
+  max-width: 100%;
+  /* max-height: 100%; */
+  object-fit: cover;
 }
