--- a/pages/index.css
+++ b/pages/index.css
@@ -61,6 +61,8 @@
 @import url('../blocks/pop-up-supplement-foto/__btn-create/pop-up-supplement-foto__btn-create.css');
 @import url('../blocks/pop-up-supplement-foto/__btn-close/pop-up-supplement-foto__btn-close.css');
 @import url('../blocks/pop-up-supplement-foto/__form/pop-up-supplement-foto__form.css');
+@import url('../blocks/pop-up-supplement-foto/__text/pop-up-supplement-foto__text.css');
+@import url('../blocks/pop-up-supplement-foto/__title/pop-up-supplement-foto__title.css');
 
 
 /* pop-up-foto */
