--- a/blocks/pop-up-foto/__container/pop-up-foto__container.css
+++ b/blocks/pop-up-foto/__container/pop-up-foto__container.css
@@ -1,7 +1,7 @@
 .pop-up-foto__container {
   max-width: calc(100% - 80px);
   min-height: 299px;
-  background-color: #fff;
+  /* background-color: #fff; */
   margin: 0 auto 0 auto;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
@@ -10,7 +10,7 @@
 
 @media (min-width: 600px) {
   .pop-up-foto__container{
-    max-width: calc(100% - 464px);
-    /* min-height: 75vh; */
+    max-width: 75vw;
+    max-height: 75vh;
   }
 }
