--- a/blocks/pop-up-foto/__img/pop-up-foto__img.css
+++ b/blocks/pop-up-foto/__img/pop-up-foto__img.css
@@ -1,5 +1,6 @@
 .pop-up-foto__img {
-  max-width: 100%;
-  /* max-height: 100%; */
   object-fit: cover;
+  max-width: 100%;
+  max-height: 100%;
 }
+
