--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -9,5 +9,8 @@
   opacity: 0;
   transition: visibility .5s, opacity .5s linear;
   z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
