--- a/blocks/pop-up/__container/pop-up__container.css
+++ b/blocks/pop-up/__container/pop-up__container.css
@@ -1,7 +1,5 @@
 .pop-up__container {
-  max-width: 282px;
-  background-color: #fff;
-  margin: 123px auto 0 auto;
+  min-width: 282px;
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   position: relative;
@@ -9,7 +7,6 @@
 
 @media (min-width: 600px) {
   .pop-up__container {
-    max-width: 430px;
-    margin: 195px auto 0 auto;
+    min-width: 430px;
   }
 }
