--- a/blocks/pop-up/__img/pop-up__img.css
+++ b/blocks/pop-up/__img/pop-up__img.css
@@ -1,10 +1,19 @@
 .pop-up__img {
-  object-fit: fill;
+  object-fit: covers;
   max-width: 240px;
   min-height: 299px;
 }
 
-@media (min-width: 768px) {
+
+
+@media (min-width: 425px) {
+  .pop-up__img {
+    max-width: 433px;
+    max-height: 540px;
+  }
+}
+
+@media (min-width: 840px) {
   .pop-up__img {
     max-width: 816px;
     max-height: 540px;
