--- a/blocks/pop-up/__img/pop-up__img.css
+++ b/blocks/pop-up/__img/pop-up__img.css
@@ -1,21 +1,5 @@
 .pop-up__img {
-  object-fit: covers;
-  max-width: 240px;
-  min-height: 299px;
+  max-width: 75vw;
+  max-height: 75vh;
 }
 
-
-
-@media (min-width: 425px) {
-  .pop-up__img {
-    max-width: 433px;
-    max-height: 540px;
-  }
-}
-
-@media (min-width: 840px) {
-  .pop-up__img {
-    max-width: 816px;
-    max-height: 540px;
-  }
-}
