--- a/pages/index.css
+++ b/pages/index.css
@@ -56,4 +56,5 @@
 @import url('../blocks/pop-up/__img/pop-up__img.css');
 @import url('../blocks/pop-up/__text-img/pop-up__text-img.css');
 @import url('../blocks/pop-up/__container/_background/pop-up__container_background.css');
+@import url('../blocks/pop-up/__foto-container/pop-up__foto-container.css');
 
