--- a/pages/index.css
+++ b/pages/index.css
@@ -57,4 +57,7 @@
 @import url('../blocks/pop-up/__text-img/pop-up__text-img.css');
 @import url('../blocks/pop-up/__container/_background/pop-up__container_background.css');
 @import url('../blocks/pop-up/__foto-container/pop-up__foto-container.css');
-
+@import url('../blocks/pop-up/__text/_error/pop-up__text_error.css');
+@import url('../blocks/pop-up/__span-error/pop-up__span-error.css');
+@import url('../blocks/pop-up/__span-error/_active/pop-up__span-error_active.css');
+@import url('../blocks/pop-up/__btn-save/_disabled/pop-up__btn-save_disabled.css');
