--- a/src/blocks/profile/__avatar/profile__avatar.css
+++ b/src/blocks/profile/__avatar/profile__avatar.css
@@ -1,5 +1,12 @@
 .profile__avatar {
-  max-width: calc(100% - 162px);
+  /* max-width: calc(100% - 162px); */
+  max-width: 120px;
+  min-height: 120px;
   border-radius: 50%;
   margin: 42px 0 0 0;
+  object-fit: cover;
+}
+
+.profile__avatar:hover {
+  opacity: .8;
 }
