--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -25,6 +25,7 @@
 @import url('../blocks/profile/__edit-button/profile__edit-button.css');
 @import url('../blocks/profile/__add-Button/profile__add-Button.css');
 @import url('../blocks/profile/__add-Btn-img/profile__add-Btn-img.css');
+@import url('../blocks/profile/__avatar-hover/profile__avatar-hover.css');
 
 /* elements */
 @import url('../blocks/elements/elements.css');
@@ -38,6 +39,8 @@
 @import url('../blocks/cards/__list/cards__list.css');
 @import url('../blocks/cards/__like/_active/cards__like_active.css');
 @import url('../blocks/cards/__btn-delete/cards__btn-delete.css');
+@import url('../blocks/cards/__like-number/cards__like-number.css');
+@import url('../blocks/cards/__item/cards__item.css');
 
 /* footer */
 @import url('../blocks/footer/footer.css');
@@ -61,3 +64,4 @@
 @import url('../blocks/pop-up/__span-error/pop-up__span-error.css');
 @import url('../blocks/pop-up/__span-error/_active/pop-up__span-error_active.css');
 @import url('../blocks/pop-up/__btn-save/_disabled/pop-up__btn-save_disabled.css');
+@import url('../blocks/pop-up/__btn-save/_size/pop-up__btn-save_size.css');
