--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -4,6 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 42px 0 0 0;
+  position: relative;
 }
 
 @media (min-width: 768px) {
